webpack 사용에 필요한 로더를 설치하고 세팅 진행하기 (but @babel/core 미설치)

--- a/vue-03-todo/메모.md
+++ b/vue-03-todo/메모.md
@@ -7,3 +7,11 @@
 ```
 npm install -D vue-loader vue-template-compiler
 ```
+
+## 바벨로더, 스타일로더 설치하기
+
+뷰 로더는 컴포넌트는 해석이 가능하지만 자바스크립트나 스타일에 관한 해석이 필요한 로더를 설치해야 한다.
+
+```
+npm install -D babel-loader vue-style-loader css-loader
+```
