--- a/vue-03-todo/메모.md
+++ b/vue-03-todo/메모.md
@@ -15,3 +15,21 @@ npm install -D vue-loader vue-template-compiler
 ```
 npm install -D babel-loader vue-style-loader css-loader
 ```
+
+### 바벨 (Babel)
+
+- ES6 이상의 문법의 코드를 ES5 이하 버전으로 변환하여 사용. 프로그램의 호환성을 높임.
+- @babel/core: 바벨이 실질적으로 동작하는 모듈
+- @babel/preset-env: 바벨의 지원 스펙을 지정. (일일이 명시하기가 어려우니까 명시해야 할 기본적인 내용을 세팅해 둔 패키지)
+- babel-loader: 웹팩 지원을 위해 사용하는 패키지
+
+```
+npm install -D @babel/core @babel/preset-env
+```
+
+- @babel/polyfill: 구형 브라우저 지원을 위해 설치
+  - 바벨을 이용하지만 구형 브라우저에서 지원되지 않는 기능을 이용할 수 있게 해 줌
+
+```
+npm install @babel/polyfill
+```
