favicon 등 복사해 줘야 할 파일들을 dist폴더에 빌드하기 (copy-webpack-plugin)

--- a/vue-03-todo/메모.md
+++ b/vue-03-todo/메모.md
@@ -36,4 +36,14 @@ npm install @babel/polyfill
 
 ### html-webpack-plugin
 
+```
 npm i -D html-webpack-plugin
+```
+
+### copy-webpack-plugin
+
+ico, png 파일을 dist폴더에 넣어줄 수 있도록 세팅하기 위해 필요한 모듈
+
+```
+npm i -D copy-webpack-plugin
+```
