clean-webpack-plugin을 이용하여 webpack 빌드 전 output폴더를 비운 뒤 수행하

--- a/vue-03-todo/메모.md
+++ b/vue-03-todo/메모.md
@@ -47,3 +47,11 @@ ico, png 파일을 dist폴더에 넣어줄 수 있도록 세팅하기 위해 필
 ```
 npm i -D copy-webpack-plugin
 ```
+
+### clean-webpack-plugin
+
+빌드할 때 파일이 삭제되지 않고 덮어씌우기 때문에 이미지 리소스의 경로명을 바꾸는 등의 변경사항이 발생한 경우에는 이전 경로의 리소스를 지워줘야 하는 번거로움이 있다. 따라서 빌드할 때마다 dist폴더를 비워주는 모듈을 설치
+
+```
+npm i -D clean-webpack-plugin
+```
