--- a/vue-03-todo/메모.md
+++ b/vue-03-todo/메모.md
@@ -55,3 +55,19 @@ npm i -D copy-webpack-plugin
 ```
 npm i -D clean-webpack-plugin
 ```
+
+## webpack-dev-server
+
+일일이 수정사항을 반영하고 빌드하기에는 시간이 오래 걸린다. 실시간으로 변경사항을 확인하고 싶다면 webpack-dev-server을 설치하여 확인할 수 있다.
+
+그러나 전역적으로 설치한 것이 아니므로 package.json의 scripts에 정의하여 사용하도록 한다.
+
+```
+npm i -D webpack-dev-server
+```
+
+사용법은 다음과 같다.
+
+```
+webpack-dev-server --mode devleopment
+```
