merge를 통한 webpack config의 분기처리

--- a/vue-03-todo/메모.md
+++ b/vue-03-todo/메모.md
@@ -71,3 +71,11 @@ npm i -D webpack-dev-server
 ```
 webpack-dev-server --mode devleopment
 ```
+
+## webpack-merge
+
+개발용, 배포용 겹치는 옵션과 다른 옵션을 분기할 수 있음.
+
+```
+npm i -D webpack-merge
+```
