CSS 전처리기와 후처리기를 위한 적용 (그러나 무슨이유에서인지 style속성이 빌드 시 적용되지 않아 모든 스타일 정의가 누락됨)

--- a/vue-03-todo/뷰-로더-모듈.md
+++ b/vue-03-todo/뷰-로더-모듈.md
@@ -1,4 +1,4 @@
-# 메모
+# 뷰 로더에 필요한 모듈 설치 정리
 
 ## 뷰 로더
 
@@ -79,3 +79,9 @@ webpack-dev-server --mode devleopment
 ```
 npm i -D webpack-merge
 ```
+
+## autoprefixer, postcss-loader
+
+- autoprefixer: 결과적으로 postcss로 돌아간다.
+- postcss-loader: webpack에서 처리되는 모듈
+- npm i -D autoprefixer postcss-loader
