ESLint 설치하고 사용하기

--- a/vue-03-todo/확장프로그램.md
+++ b/vue-03-todo/확장프로그램.md
@@ -3,3 +3,9 @@
 ## 1. Vutur
 
 - Vue 관련 자동완성
+
+## 2. ESLint
+
+```
+npm i -D eslint@^5 babel-eslint eslint-config-standard@^12 eslint-plugin-import eslint-plugin-node eslint-plugin-promise eslint-plugin-standard eslint-plugin-vue
+```
